@@ -14,7 +14,9 @@
 
 import logging
 import os
+import shutil
 import zc.buildout
+import hashlib
 
 from jinja2 import Environment, PackageLoader, ChoiceLoader, FunctionLoader, FileSystemLoader
 
@@ -318,28 +320,66 @@ class ApacheMaintenance(ApacheBase):
         options.setdefault("copy-files", "")
         options.setdefault("maintenance_page", "index.html")
 
+    def _should_copy_files(self, src, dest):
+        def md5sum(filename, block_size=2**20):
+            md5 = hashlib.md5()
+            f = open(filename, 'rb')
+            while True:
+                data = f.read(block_size)
+                if not data:
+                    break
+                md5.update(data)
+            return md5.hexdigest()
+
+        def snapshot_directory(directory):
+            files = {}
+            for dirpath, dirnames, filenames in os.walk(src):
+                for filename in filenames:
+                    path = os.path.join(dirpath, filename)
+                    files[path] = md5sum(path)
+            return files
+
+        if not os.path.exists(dest):
+            return True
+
+        if snapshot_directory(src) != snapshot_directory(dest):
+            return True
+
+        return False
+
+    def copy_files(self):
+        if self.options.get("copy-files", None):
+            # Copy the maintenance page files into parts
+            dest = os.path.join(
+                self.buildout["buildout"]["parts-directory"],
+                self.name,
+                'maintenance-pages'
+            )
+
+            if self._should_copy_files(self.options.get("copy-files"), dest):
+                if os.path.isdir(dest):
+                    shutil.rmtree(dest)
+                shutil.copytree(self.options.get("copy-files"), dest)
+
+            # Override the document_root
+            self.options["document_root"] = dest
+
+            return [dest]
+
+        return []
+
     def install(self):
         outputdir, path = os.path.split(os.path.realpath(self.options["configfile"]))
-        paths = []
         if not os.path.exists(outputdir):
             os.makedirs(outputdir)
 
-        if self.options.get("copy-files", None):
-            # Copy the maintenance page files into parts
-            dest = os.path.join(buildout["parts-directory"], name)
-            if not os.path.exists(dest):
-                os.mkdir(dest)
-
-            shutil.copytree(self.options.get("copy-files"), dest)
-            self.options["document_root"] = dest
-            paths += [dest]
+        paths = self.copy_files()
 
         self.write_jinja_config(self.options)
-
         return paths
 
     def update(self):
-        pass
+        return self.copy_files()
 
 
 class Redirect(ApacheBase):
